[gd_scene load_steps=28 format=2]

[ext_resource path="res://src/actors/player/player.gd" type="Script" id=1]
[ext_resource path="res://src/scripts/Hitboxes/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scripts/Hitboxes/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Weapons/Sword.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/Chops-Sheet.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.75539
height = 2.08908

[sub_resource type="Animation" id=2]
resource_name = "Idle Left"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Chops_Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 17 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle Right"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Chops_Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Chops_Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Chops_Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "slash effect"
length = 0.25
loop = true
step = 0.01

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Idle Left"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Idle Left"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Idle Right"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Idle Right"

[sub_resource type="AnimationNodeBlendSpace2D" id=11]
blend_point_0/node = SubResource( 7 )
blend_point_0/pos = Vector2( -1.1, 1 )
blend_point_1/node = SubResource( 8 )
blend_point_1/pos = Vector2( -1.1, -1.1 )
blend_point_2/node = SubResource( 9 )
blend_point_2/pos = Vector2( 1, 1 )
blend_point_3/node = SubResource( 10 )
blend_point_3/pos = Vector2( 1, -1.1 )
min_space = Vector2( -1.1, -1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "RunRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 12 )
blend_point_0/pos = Vector2( -1.1, 1 )
blend_point_1/node = SubResource( 13 )
blend_point_1/pos = Vector2( -1.1, -1.1 )
blend_point_2/node = SubResource( 14 )
blend_point_2/pos = Vector2( 1, 1 )
blend_point_3/node = SubResource( 15 )
blend_point_3/pos = Vector2( 1, -1.1 )
min_space = Vector2( -1.1, -1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachine" id=19]
states/Idle/node = SubResource( 11 )
states/Idle/position = Vector2( 575, 95 )
states/Run/node = SubResource( 16 )
states/Run/position = Vector2( 742, 95 )
transitions = [ "Idle", "Run", SubResource( 17 ), "Run", "Idle", SubResource( 18 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=20]

[sub_resource type="CapsuleShape2D" id=21]
radius = 3.29744
height = 8.77289

[sub_resource type="CapsuleShape2D" id=22]
radius = 7.12335
height = 11.763

[node name="PlayerRoot" type="KinematicBody2D"]
collision_layer = 2147483656
collision_mask = 28
script = ExtResource( 1 )
knockback_strength = 250

[node name="MoveShape" type="CollisionShape2D" parent="."]
position = Vector2( 0.0928307, -1.11961 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Idle Left" = SubResource( 2 )
"anims/Idle Right" = SubResource( 3 )
anims/RunLeft = SubResource( 4 )
anims/RunRight = SubResource( 5 )
"anims/slash effect" = SubResource( 6 )

[node name="SwordPivot" type="Position2D" parent="."]
position = Vector2( 0, -3.5 )

[node name="Sword" type="Sprite" parent="SwordPivot"]
position = Vector2( -0.396851, -10.1197 )
rotation = -0.785398
texture = ExtResource( 5 )

[node name="SlashEffectSpawn" type="Position2D" parent="SwordPivot"]
position = Vector2( 0.0237212, 2.38589 )

[node name="Chops_Sheet" type="Sprite" parent="."]
position = Vector2( 0, -14.3774 )
texture = ExtResource( 6 )
hframes = 28
frame = 17

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 19 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 20 )
parameters/Idle/blend_position = Vector2( -0.918175, 0.131034 )
parameters/Run/blend_position = Vector2( 0.257956, -0.0318966 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1, -3.5 )
zoom = Vector2( 0.3, 0.3 )
limit_smoothed = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="AtkCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( -0.500565, -4.92222 )
shape = SubResource( 21 )

[node name="HurtBoxPiv" parent="." instance=ExtResource( 3 )]

[node name="HurtBox" parent="HurtBoxPiv" index="0"]
collision_layer = 1

[node name="CollisionShape2D" parent="HurtBoxPiv/HurtBox" index="0"]
position = Vector2( 10.0113, -4.58851 )
shape = SubResource( 22 )
disabled = true
[connection signal="timeout" from="AtkCooldown" to="." method="_on_AtkCooldown_timeout"]

[editable path="HitBox"]

[editable path="HurtBoxPiv"]
